# A-microservice-in-Rust

./: .env  Cargo.toml  Dockerfile  Dockerfile-db  docker-compose.yml
.sqlx/: query-472f61b8b1262f85ccacdf89b66789ea486de1a185d02b5840d17450e115dab7.json  query-9faf9e2fe72076b07f93a423d4a92e925c18102867852145f9eec3880deb690a.json  query-f33c42c591b2a759fe84d6f63e202d818c48a13b827749bab1c56eaf97a0601b.json  query-f573fd595b9fd7842b0bb0ef66eb58969e0609a6aba581222be2eb94f65a5331.json
src/: main.rs  message.rs  time_range.rs
src/schemas/: messages.sql
