[package]
name = "rust_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
futures = "0.3.30"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"
bytes = "1.5.0"
url = "2.5.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "macros", "time"] }
dotenv = "0.15.0"
maud = "0.26.0"